force-app/main/default/objects/Account/fields/Raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>Raison_sociale__c</fullName>
    <label>Raison sociale 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>