force-app/main/default/objects/Account/fields/rtxt_message_accueil__c.field-meta.xml
<CustomField>
    <fullName>rtxt_message_accueil__c</fullName>
    <label>Message d&apos;accueil</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>