force-app/main/default/objects/Account/fields/Segmentation_financi_re__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_financi_re__c</fullName>
    <label>Segmentation financière</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Code des assurances</fullName>
            </value>
            <value>
                <fullName>Code de la sécurité sociale</fullName>
            </value>
            <value>
                <fullName>Code de la mutualité</fullName>
            </value>
            <value>
                <fullName>Règlement AGIRC-ARCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>