force-app/main/default/objects/Account/fields/SIREN_2__c.field-meta.xml
<CustomField>
    <fullName>SIREN_2__c</fullName>
    <label>SIREN 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>