force-app/main/default/objects/Account/fields/SIREN_3__c.field-meta.xml
<CustomField>
    <fullName>SIREN_3__c</fullName>
    <label>SIREN 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>