force-app/main/default/objects/Account/fields/SIREN_4__c.field-meta.xml
<CustomField>
    <fullName>SIREN_4__c</fullName>
    <label>SIREN 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>