force-app/main/default/objects/Account/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN 1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>