force-app/main/default/objects/Account/fields/Situation_de_conflit_dinteret__c.field-meta.xml
<CustomField>
    <fullName>Situation_de_conflit_dinteret__c</fullName>
    <label>Situation de conflit d&apos;intérêt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>