force-app/main/default/objects/Account/fields/sous_categorie__c.field-meta.xml
<CustomField>
    <fullName>sous_categorie__c</fullName>
    <label>Sous-catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>lst_categorie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groupement</fullName>
            </value>
            <value>
                <fullName>Plateforme</fullName>
                <label>Plateforme Distribution</label>
            </value>
            <value>
                <fullName>CGP Indépendant</fullName>
            </value>
            <value>
                <fullName>Multi Family Office</fullName>
            </value>
            <value>
                <fullName>Banque privée</fullName>
            </value>
            <value>
                <fullName>Banque commerciale</fullName>
            </value>
            <value>
                <fullName>Assureur Vie</fullName>
            </value>
            <value>
                <fullName>Mutuelle</fullName>
            </value>
            <value>
                <fullName>Indépendant/multi-family office</fullName>
                <isActive>false</isActive>
                <label>Indépendant/multi-family office</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>