force-app/main/default/objects/Account/fields/Sous_secteur_1__c.field-meta.xml
<CustomField>
    <fullName>Sous_secteur_1__c</fullName>
    <inlineHelpText>Choisi le sous-secteur d&apos;activité. Demander au responsable SF si besoin d&apos;une nouvelle valeur.</inlineHelpText>
    <label>Sous/secteur 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alimentation biologique</fullName>
            </value>
            <value>
                <fullName>Alimentation traditionnelle</fullName>
            </value>
            <value>
                <fullName>Artisanat</fullName>
            </value>
            <value>
                <fullName>Automobile / Aéronautique</fullName>
            </value>
            <value>
                <fullName>Boulangerie</fullName>
            </value>
            <value>
                <fullName>Cabinet de conseil</fullName>
            </value>
            <value>
                <fullName>Culture / Médias</fullName>
            </value>
            <value>
                <fullName>Distribution alimentaire</fullName>
            </value>
            <value>
                <fullName>Fabrication / Distribution</fullName>
            </value>
            <value>
                <fullName>FDC - Paris</fullName>
            </value>
            <value>
                <fullName>FDC - Province</fullName>
            </value>
            <value>
                <fullName>Formation</fullName>
            </value>
            <value>
                <fullName>Informatique</fullName>
            </value>
            <value>
                <fullName>Matériel</fullName>
            </value>
            <value>
                <fullName>Mobilier</fullName>
            </value>
            <value>
                <fullName>Murs et fonds - Paris</fullName>
            </value>
            <value>
                <fullName>Murs et fonds - Province</fullName>
            </value>
            <value>
                <fullName>Nettoyage / Environnement</fullName>
            </value>
            <value>
                <fullName>Prêt à porter</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Restaurant - Paris</fullName>
            </value>
            <value>
                <fullName>Restaurant - Province</fullName>
            </value>
            <value>
                <fullName>Santé</fullName>
            </value>
            <value>
                <fullName>Service à la personne</fullName>
            </value>
            <value>
                <fullName>Soin / Beauté</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Télécommunication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>