force-app/main/default/objects/Account/fields/Sous_secteur_2__c.field-meta.xml
<CustomField>
    <fullName>Sous_secteur_2__c</fullName>
    <inlineHelpText>Demander au responsable Salesforce si besoin de nouveaux champs</inlineHelpText>
    <label>Sous/secteur 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affaires</fullName>
            </value>
            <value>
                <fullName>Agence</fullName>
            </value>
            <value>
                <fullName>Agricole</fullName>
            </value>
            <value>
                <fullName>Agriculture/Pisciculture</fullName>
            </value>
            <value>
                <fullName>Aide à domicile</fullName>
            </value>
            <value>
                <fullName>Aimants</fullName>
            </value>
            <value>
                <fullName>Ambulance</fullName>
            </value>
            <value>
                <fullName>Aquarium</fullName>
            </value>
            <value>
                <fullName>Aquatique</fullName>
            </value>
            <value>
                <fullName>Assurance</fullName>
            </value>
            <value>
                <fullName>Audiovisuel</fullName>
            </value>
            <value>
                <fullName>Auditif</fullName>
            </value>
            <value>
                <fullName>Bar/restaurant</fullName>
            </value>
            <value>
                <fullName>Biens de consommation</fullName>
            </value>
            <value>
                <fullName>Bois</fullName>
            </value>
            <value>
                <fullName>Boisson</fullName>
            </value>
            <value>
                <fullName>Boucherie/Charcuterie</fullName>
            </value>
            <value>
                <fullName>Brasserie</fullName>
            </value>
            <value>
                <fullName>BTP</fullName>
            </value>
            <value>
                <fullName>Chaussure</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Compléments alimentaire</fullName>
            </value>
            <value>
                <fullName>Crèche</fullName>
            </value>
            <value>
                <fullName>Décontamination</fullName>
            </value>
            <value>
                <fullName>Décoration</fullName>
            </value>
            <value>
                <fullName>Distribution alimentaire</fullName>
            </value>
            <value>
                <fullName>Divertissement</fullName>
            </value>
            <value>
                <fullName>Edition de logiciel</fullName>
            </value>
            <value>
                <fullName>Entretien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>