force-app/main/default/objects/Account/fields/Statut_r_glementaire__c.field-meta.xml
<CustomField>
    <fullName>Statut_r_glementaire__c</fullName>
    <label>Statut règlementaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PSI</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>sans agrément</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>