force-app/main/default/objects/Account/fields/Suivi_commercial__c.field-meta.xml
<CustomField>
    <fullName>Suivi_commercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suivi commercial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Suivi_commercial__c.Owner2__c</field>
            <operation>equals</operation>
            <valueField>Suivi_commercial__c.Owner2__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Suivi_commercial__c</referenceTo>
    <relationshipLabel>Personnes morales</relationshipLabel>
    <relationshipName>Personnes_morales</relationshipName>
    <type>Lookup</type>
</CustomField>