force-app/main/default/objects/Account/fields/Taux_de_d_tention_2__c.field-meta.xml
<CustomField>
    <fullName>Taux_de_d_tention_2__c</fullName>
    <label>Taux de détention 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>