force-app/main/default/objects/Account/fields/Total_montant_investi_de_la_souscription__c.field-meta.xml
<CustomField>
    <fullName>Total_montant_investi_de_la_souscription__c</fullName>
    <label>Total montant collecté</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>