force-app/main/default/objects/Account/fields/Toujours_en_relation_avec_clients__c.field-meta.xml
<CustomField>
    <fullName>Toujours_en_relation_avec_clients__c</fullName>
    <label>Toujours en relation avec clients</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>