force-app/main/default/objects/Account/fields/tx_part_upfront_ttc__c.field-meta.xml
<CustomField>
    <fullName>tx_part_upfront_ttc__c</fullName>
    <label>Commission Upfront Négociée</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>