force-app/main/default/objects/Account/fields/txt_description_activite__c.field-meta.xml
<CustomField>
    <fullName>txt_description_activite__c</fullName>
    <label>Description de l&apos;activité PM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>