force-app/main/default/objects/Account/fields/txt_ent_amf__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_amf__c</fullName>
    <label>Code AMF</label>
    <length>7</length>
    <type>Text</type>
</CustomField>