force-app/main/default/objects/Account/fields/txt_ent_bic__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_bic__c</fullName>
    <label>BIC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>