force-app/main/default/objects/Account/fields/txt_ent_code_naf__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_code_naf__c</fullName>
    <label>Code NAF</label>
    <length>10</length>
    <type>Text</type>
</CustomField>