force-app/main/default/objects/Account/fields/txt_ent_iban__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_iban__c</fullName>
    <label>IBAN</label>
    <length>33</length>
    <type>Text</type>
</CustomField>