force-app/main/default/objects/Account/fields/txt_ent_nom_banque__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_nom_banque__c</fullName>
    <label>Nom de la banque</label>
    <length>150</length>
    <type>Text</type>
</CustomField>