force-app/main/default/objects/Account/fields/txt_ent_objet_social__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_objet_social__c</fullName>
    <label>Objet social</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>