force-app/main/default/objects/Account/fields/txt_ent_raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_raison_sociale__c</fullName>
    <label>Raison Sociale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>