force-app/main/default/objects/Account/fields/txt_ent_rcs__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_rcs__c</fullName>
    <label>RCS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>