force-app/main/default/objects/Account/fields/txt_ent_rib_banque__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_rib_banque__c</fullName>
    <label>RIB : Banque</label>
    <length>5</length>
    <type>Text</type>
</CustomField>