force-app/main/default/objects/Account/fields/txt_ent_rib_clef__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_rib_clef__c</fullName>
    <label>RIB : Clef</label>
    <length>2</length>
    <type>Text</type>
</CustomField>