force-app/main/default/objects/Account/fields/txt_ent_rib_guichet__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_rib_guichet__c</fullName>
    <label>RIB : Guichet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>