force-app/main/default/objects/Account/fields/txt_ent_rib_num_compte__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_rib_num_compte__c</fullName>
    <label>RIB : N° de compte</label>
    <length>11</length>
    <type>Text</type>
</CustomField>