force-app/main/default/objects/Account/fields/txt_ent_siren__c.field-meta.xml
<CustomField>
    <fullName>txt_ent_siren__c</fullName>
    <label>SIREN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>