force-app/main/default/objects/Account/fields/txt_facturation_cedex__c.field-meta.xml
<CustomField>
    <fullName>txt_facturation_cedex__c</fullName>
    <label>Cedex</label>
    <length>10</length>
    <type>Text</type>
</CustomField>