force-app/main/default/objects/Account/fields/txt_facturation_cplt_adresse__c.field-meta.xml
<CustomField>
    <fullName>txt_facturation_cplt_adresse__c</fullName>
    <label>Complément d&apos;adresse</label>
    <length>50</length>
    <type>Text</type>
</CustomField>