force-app/main/default/objects/Account/fields/txt_facturation_ville_principal__c.field-meta.xml
<CustomField>
    <fullName>txt_facturation_ville_principal__c</fullName>
    <label>Ville principale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>