force-app/main/default/objects/Account/fields/txt_part_cif__c.field-meta.xml
<CustomField>
    <fullName>txt_part_cif__c</fullName>
    <label>Code CIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>