force-app/main/default/objects/Account/fields/txt_part_produits_json__c.field-meta.xml
<CustomField>
    <fullName>txt_part_produits_json__c</fullName>
    <label>Produits autorisés</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>