force-app/main/default/objects/Account/fields/Utilisateur__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Personnes_morales</relationshipName>
    <type>Lookup</type>
</CustomField>