force-app/main/default/objects/Account/recordTypes/Compte_Personne_morale.recordType-meta.xml
<RecordType>
    <fullName>Compte_Personne_morale</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement créé afin de pouvoir activer les comptes personnels</description>
    <label>Compte Personne morale</label>
</RecordType>