force-app/main/default/objects/Account/recordTypes/Distributeurs_Retail.recordType-meta.xml
<RecordType>
    <fullName>Distributeurs_Retail</fullName>
    <active>true</active>
    <description>vue pour les commerciaux</description>
    <label>Distributeurs / Retail</label>
</RecordType>