force-app/main/default/objects/Account/recordTypes/Investisseur_Institutionnel.recordType-meta.xml
<RecordType>
    <fullName>Investisseur_Institutionnel</fullName>
    <active>true</active>
    <label>Investisseur Institutionnel</label>
</RecordType>