force-app/main/default/objects/Account/listViews/Agences.listView-meta.xml
<ListView>
    <fullName>Agences</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>lst_categorie__c</field>
        <operation>equals</operation>
        <value>Family Office</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Kranter!</value>
    </filters>
    <label>Family Offices</label>
</ListView>