force-app/main/default/objects/Account/listViews/Apporteurs_d_Affaire.listView-meta.xml
<ListView>
    <fullName>Apporteurs_d_Affaire</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>id_contact_apporteur__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Apporteur d&apos;affaire</value>
    </filters>
    <label>Apporteurs d&apos;Affaire</label>
</ListView>