force-app/main/default/objects/Account/listViews/Conseils_Juridiques.listView-meta.xml
<ListView>
    <fullName>Conseils_Juridiques</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>id_contact_apporteur__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Conseil</value>
    </filters>
    <label>Conseils Juridiques</label>
</ListView>