force-app/main/default/objects/Account/listViews/Groupes.listView-meta.xml
<ListView>
    <fullName>Groupes</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>id_bosar_txt__c</columns>
    <columns>id_bosar__c</columns>
    <columns>rtxt_message_accueil__c</columns>
    <filterScope>Everything</filterScope>
    <label>Groupes</label>
</ListView>