force-app/main/default/objects/Account/listViews/Holdings.listView-meta.xml
<ListView>
    <fullName>Holdings</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>lst_part_statut__c</columns>
    <columns>id_bosar__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Société de gestion</value>
    </filters>
    <label>Holdings</label>
</ListView>