force-app/main/default/objects/Account/listViews/Institutionnels.listView-meta.xml
<ListView>
    <fullName>Institutionnels</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Institutionnels</label>
</ListView>