force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_CITY</field>
        <operation>equals</operation>
        <value>Nantes</value>
    </filters>
    <label>Mes personnes morales</label>
</ListView>